--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>react-copy-mailto</title>
-
-</head>
-
-<body>
-  <div id="app"></div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>react-copy-mailto</title>
+  </head>
+  <body style="background-color: papayawhip; font-family: sans-serif;">
+    <div id="app"></div>
+  </body>
 </html>
