--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>react-copy-mailto</title>
   </head>
-  <body style="background-color: papayawhip; font-family: sans-serif;">
+  
+  <body style="background-color: papayawhip; font-family: sans-serif; font-size: 25px ;font-weight: bolder; ">
+    
     <div id="app"></div>
   </body>
 </html>
