UI for Demo Page Refactor

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
     <title>react-copy-mailto</title>
   </head>
-  <body style="background-color: papayawhip; font-family: sans-serif;">
+  <body style="background-color: smokewhite; font-family: sans-serif;">
     <div id="app"></div>
   </body>
 </html>
