--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>react-copy-mailto</title>
-  </head>
-  <body style="background-color: papayawhip; font-family: sans-serif;">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet">
+</head>
+
+<body>
     <div id="app"></div>
-  </body>
+</body>
+
 </html>
