--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>react-copy-mailto</title>
+    <title>React based Mail Copy-Accesibility</title>
   </head>
-  <body style="background-color: papayawhip; font-family: sans-serif;">
+  <body style="background-color: #92a8d1; font-family: Helvetica;">
     <div id="app"></div>
   </body>
 </html>
