--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>React based Mail Copy-Accesibility</title>
   </head>
-  <body style="background-color: #92a8d1; font-family: Helvetica;">
+  <body style="background-color: #8397bc1; font-family: Sans-serif;">
     <div id="app"></div>
   </body>
 </html>
